--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -96,10 +96,10 @@
 										<div class="border-wrapper"></div>
 										<div class="container text-about">
 											<p>
-												Добро пожаловать в нашу гостиницу в прекрасном районе Нормальм в Стокгольме! Мы предлагаем комфортабельные номера и широкий спектр услуг, чтобы сделать ваше пребывание у нас максимально приятным.
+												Добро пожаловать в нашу гостиницу, идеальное место для вашего комфортного пребывания в центре города. Мы гордимся предоставлением высококлассного размещения и незабываемого опыта для наших гостей. Наше расположение близко ко всему — деловому центру, достопримечательностям и торговым центрам, что позволяет вам максимально насладиться вашим пребыванием без лишних переездов.
 												<br>
 												<br>
-												Наша гостиница знаменита своим уникальным дизайном и дружелюбным персоналом, который готов помочь вам в любых вопросах. Мы предлагаем номера различных категорий, чтобы удовлетворить любые потребности и бюджеты. В каждом номере есть все необходимое для комфортного проживания, включая бесплатный Wi-Fi, телевизор с плоским экраном, холодильник и многие другие удобства.
+												Наши номера оформлены с большим вниманием к деталям, чтобы обеспечить вам комфорт и уют. У нас вы найдете все необходимое для приятного отдыха, включая современные удобства и приветливый персонал, готовый помочь вам в любое время. Посетите нас и насладитесь беззаботным и роскошным пребыванием в нашей гостинице.
 											</p>
 										</div>
 									</div>
@@ -112,7 +112,7 @@
 					<div class="three_pictures container-fluid">
 						<div class="image-container">
 							<div class="block-pictures">
-								<img src="/img/bedroom.jpg" alt="bedroom">
+								<img src="/img/bedroom.png" alt="bedroom">
 							</div>
 							<div class="block-pictures block-pictures-middle">
 								<img src="/img/breakfast.jpg" alt="breakfast">
