--- a/src/main/webapp/WEB-INF/views/location.html
+++ b/src/main/webapp/WEB-INF/views/location.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head th:include="fragments/head :: headFragment">
-	<title id="pageTitle">Местонахождение</title>
-	<style>
-		.row {
-			margin-bottom: 25px;
-		}
-	</style>
+<title id="pageTitle">Расположение</title>
+<style>
+.row {
+	margin-bottom: 25px;
+}
+</style>
 </head>
 <body>
 	<script id="yandexMap" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=056f5243-0d5c-4996-a7be-0d2ffd462989" type="text/javascript"></script>
@@ -14,85 +14,8 @@
 		<main class="content">
 
 			<header th:insert="fragments/sideNavbar :: navbar (page='location')"></header>
+			<div th:insert="fragments/mobileMenu :: mobileMenu"></div>
 
-			<div class="mobileMenu d-block d-lg-none">
-				<div class="mobileButtonDiv" style="display: flex;">
-					<a id="mobile-button" style="margin: 0 20px;">
-						<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" style="width: 40px; margin: 20px 0;" viewBox="0 0 502 502" x="0px" y="0px"
-							xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
-						<g>
-						<g>
-							<g>
-								<path
-								d="M 445.317 143.126 H 56.683 C 25.428 143.126 0 117.698 0 86.443 C 0 55.188 25.428 29.76 56.683 29.76 h 388.635 C 476.572 29.76 502 55.188 502 86.443 C 502 117.698 476.572 143.126 445.317 143.126 Z M 56.683 49.76 C 36.456 49.76 20 66.216 20 86.443 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 S 465.544 49.76 445.317 49.76 H 56.683 Z" />
-							</g>
-						</g>
-						<g>
-							<g>
-								<path
-								d="M 445.317 307.683 H 56.683 C 25.428 307.683 0 282.255 0 251 s 25.428 -56.683 56.683 -56.683 h 388.635 C 476.572 194.317 502 219.745 502 251 S 476.572 307.683 445.317 307.683 Z M 56.683 214.317 C 36.456 214.317 20 230.773 20 251 s 16.456 36.683 36.683 36.683 h 388.635 C 465.544 287.683 482 271.227 482 251 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
-							</g>
-						</g>
-						<g>
-							<g>
-								<path
-								d="M 445.317 472.24 H 56.683 C 25.428 472.24 0 446.812 0 415.557 c 0 -31.255 25.428 -56.683 56.683 -56.683 h 388.635 c 31.255 0 56.683 25.428 56.683 56.683 C 502 446.812 476.572 472.24 445.317 472.24 Z M 56.683 378.874 C 36.456 378.874 20 395.33 20 415.557 s 16.456 36.683 36.683 36.683 h 388.635 c 20.227 0 36.683 -16.456 36.683 -36.683 s -16.456 -36.683 -36.683 -36.683 H 56.683 Z" />
-							</g>
-						</g>
-						<g>
-							<path d="M 230.576 87.106 H 57.85 c -5.523 0 -10 -4.477 -10 -10 s 4.477 -10 10 -10 h 172.726 c 5.523 0 10 4.477 10 10 S 236.099 87.106 230.576 87.106 Z" />
-						</g>
-						<g>
-							<path d="M 297.099 87.106 h -19.84 c -5.523 0 -10 -4.477 -10 -10 s 4.477 -10 10 -10 h 19.84 c 5.523 0 10 4.477 10 10 S 302.622 87.106 297.099 87.106 Z" />
-						</g>
-						</svg>
-					</a>
-					<div id="mobileLogo" style="display: none; margin: 22px 20px 20px 20px;">
-						<a href="../index.html">
-							<img src="../img/knd.png" alt="logo">
-						</a>
-					</div>
-				</div>
-
-				<div id="mobileMenuDown" style="display: none;">
-					<ul>
-						<li>
-							<div class="mobile m-rooms">
-								<a href="/rooms">Номера</a>
-							</div>
-						</li>
-						<li>
-							<div class="mobile m-setings">
-								<a href="/services">Подробнее</a>
-							</div>
-						</li>
-						<li>
-							<div class="mobile m-photos">
-								<a href="/photos">Фотографии</a>
-							</div>
-						</li>
-						<li>
-							<div class="mobile m-location">
-								<a href="/location">Расположение</a>
-							</div>
-						</li>
-						<li>
-							<div class="mobile m-booking">
-								<a href="/book">Забронировать</a>
-							</div>
-						</li>
-					</ul>
-					<div class="m-social">
-						<a href="https://vk.com/pragmatic_person" id="vk">
-							<i class="fa fa-vk"></i>
-						</a>
-						<br>
-						<a href="" id="inst">
-							<i class="fa fa-instagram"></i>
-						</a>
-					</div>
-				</div>
-			</div>
 			<div id="main_content">
 				<div class="container-fluid">
 					<div class="title">
@@ -106,10 +29,10 @@
 									<a id="norm" href="https://en.wikipedia.org/wiki/Norrmalm">
 										<u>Норрмальм</u>
 									</a>
-									в Стокгольме – это географический и деловой центр шведской столицы. Он является отличным местом для прогулок по паркам, магазинам и знакомства с лучшими
-									историческими и современными достопримечательностями города. Этот квартал поражает своей невероятной архитектурой, сочетающей в себе черты прообразов старинных
-									построек и высоких небоскребов. Последняя его значимая перестройка проводилась после Второй мировой войны, именно тогда на волне стремления к модернизации были
-									снесены многие старые здания и возведены новые, более современные сооружения.
+									в Стокгольме – это географический и деловой центр шведской столицы. Он является отличным местом для прогулок по паркам, магазинам и знакомства с лучшими историческими и
+									современными достопримечательностями города. Этот квартал поражает своей невероятной архитектурой, сочетающей в себе черты прообразов старинных построек и высоких
+									небоскребов. Последняя его значимая перестройка проводилась после Второй мировой войны, именно тогда на волне стремления к модернизации были снесены многие старые здания и
+									возведены новые, более современные сооружения.
 								</p>
 							</div>
 							<div id="map"></div>
@@ -128,8 +51,8 @@
 								<p>
 									Старый город, до 1980 года официально назывался
 									<b>Город между мостами</b>
-									- исторический центр Стокгольма, находящийся на острове Стадсхолмен. Эта часть города построена в XIII в., поэтому здесь много узких мощёных улочек и переулков,
-									а так же старой архитектуры.
+									- исторический центр Стокгольма, находящийся на острове Стадсхолмен. Эта часть города построена в XIII в., поэтому здесь много узких мощёных улочек и переулков, а так же
+									старой архитектуры.
 								</p>
 							</div>
 							<div class="col-12 col-lg-6">
@@ -145,8 +68,8 @@
 								<div class="title">
 									<h3>Церковь Святой Клары</h3>
 								</div>
-								<p>Церковь была разрушена, отстроена вновь, пережила серьезный пожар и реконструкцию города. Сейчас она окружена современными зданиями. Поистине уголок
-									истории в современном городе</p>
+								<p>Церковь была разрушена, отстроена вновь, пережила серьезный пожар и реконструкцию города. Сейчас она окружена современными зданиями. Поистине уголок истории в
+									современном городе</p>
 							</div>
 						</div>
 						<div class="row align-items-center">
@@ -154,8 +77,8 @@
 								<div class="title">
 									<h3>Скиннарвиксбергет</h3>
 								</div>
-								<p>Самая высокая природная точка в центре Стокгольма - любимое место местных жителей и отличное место для пикников. От сюда открывается прекрасный вид на
-									Стокгольмскую ратушу, Старый Город и другие достопримечательности.</p>
+								<p>Самая высокая природная точка в центре Стокгольма - любимое место местных жителей и отличное место для пикников. От сюда открывается прекрасный вид на Стокгольмскую
+									ратушу, Старый Город и другие достопримечательности.</p>
 							</div>
 							<div class="col-12 col-lg-6">
 								<img src="../img/skin.jpg" class="slider__item" alt="skin">
