--- a/src/main/webapp/WEB-INF/views/admin/book/all.html
+++ b/src/main/webapp/WEB-INF/views/admin/book/all.html
@@ -12,7 +12,7 @@
 
 		<div id="main_content">
 			<div class="container-fluid">
-				<div class="row justify-content-center">
+				<div class="row justify-content-center my-3">
 					<h2>История бронирования</h2>
 				</div>
 				<div>
@@ -53,12 +53,14 @@
 										<span th:text="${r.totalPrice}">Price </span>
 									</td>
 									<td>
-										<div>
-											<a class="fa fa-pencil custom-btn m-1 mx-2" th:href="@{/admin/book/{id}(id=${r.id})}"></a>
-											<form action="#" th:action="@{/admin/book}" method="post">
+										<div class="d-flex">
+											<a class="custom-btn mx-2" th:href="@{/admin/book/{id}(id=${r.id})}">
+												<ion-icon name="create-outline"></ion-icon>
+											</a>
+											<form action="#" th:action="@{/admin/book}" method="post" class="d-inline-block">
 												<input type="hidden" th:value="${r.id}" name="id" />
-												<button class="delete-btn custom-btn" type="submit" name="delete">
-													<span class='fa fa-trash'></span>
+												<button class="custom-btn" type="submit" name="delete">
+													<ion-icon name="trash-outline" style="color: red;"></ion-icon>
 												</button>
 											</form>
 										</div>
@@ -66,11 +68,8 @@
 								</tr>
 								<tr th:each="room : ${r.rooms}" class="roomsRow">
 									<td></td>
-									<td>
-										<span th:text="${'Id типа комнаты: ' + room.type.id}"></span>
-									</td>
-									<td>
-										<span th:text="${room.type.title}"></span>
+									<td colspan="3" class="text-center">
+										<span th:text="${room.name + ', ' + room.type.title}"></span>
 									</td>
 									<td colspan="2">
 										<span th:text="${'Цена за комнату: ' + r.dateDiff * room.type.price}"></span>
@@ -80,13 +79,12 @@
 											<form action="#" th:action="@{/admin/book/room}" method="post">
 												<input type="hidden" th:value="${r.id}" name="reservationId" />
 												<input type="hidden" th:value="${room.id}" name="roomId" />
-												<button class="delete-btn custom-btn" type="submit" name="delete">
-													<span class='fa fa-trash'></span>
+												<button class="custom-btn" type="submit" name="delete">
+													<ion-icon name="trash-outline" style="color: red;"></ion-icon>
 												</button>
 											</form>
 										</div>
 									</td>
-									<td></td>
 								</tr>
 							</th:block>
 						</tbody>
@@ -96,7 +94,7 @@
 		</div>
 	</div>
 
-	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script src="/js/script.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 </body>
