--- a/src/main/webapp/WEB-INF/views/admin/rooms/one.html
+++ b/src/main/webapp/WEB-INF/views/admin/rooms/one.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head th:insert="fragments/head :: headFragment">
-<title id="pageTitle">Edit room</title>
+<title id="pageTitle">Редактирование комнаты</title>
 </head>
 <head>
 <script src="/js/slider.js"></script>
@@ -14,7 +14,7 @@
 		<div th:insert="fragments/mobileMenu :: mobileMenu"></div>
 
 		<div id="main_content">
-			<h2 class="text-center my-4">Изменение комнаты</h2>
+			<h2 class="text-center my-4">Редактирование комнаты</h2>
 
 			<div th:if="${error != null}">
 				<div class="p-3 mb-2 bg-warning text-dark">
@@ -22,7 +22,7 @@
 					<br>
 				</div>
 			</div>
-			<form action="#" th:action="@{/admin/rooms/{id}(id=${room.id})}" th:object="${room}" method="post">
+			<form action="#" th:action="@{/admin/rooms/{id}(id=${roomType.id})}" th:object="${roomType}" method="post">
 
 				<div class="container-fluid">
 					<div class="row mx-0">
@@ -38,7 +38,7 @@
 								</div>
 								<div class="row my-1">
 									<div class="col-4 col-md-5">
-										<label class="col-form-label">Title:</label>
+										<label class="col-form-label">Название:</label>
 									</div>
 									<div class="col">
 										<input class="form-control" type="text" th:field="*{title}" required />
@@ -46,7 +46,7 @@
 								</div>
 								<div class="row my-1">
 									<div class="col-4 col-md-5">
-										<label class="col-form-label">Source:</label>
+										<label class="col-form-label">Путь:</label>
 									</div>
 									<div class="col">
 										<input class="form-control" type="text" th:field="*{source}" required />
@@ -54,7 +54,7 @@
 								</div>
 								<div class="row my-1">
 									<div class="col-5">
-										<label class="col-form-label">Max people:</label>
+										<label class="col-form-label">Макс. людей:</label>
 									</div>
 									<div class="col">
 										<input class="form-control" type="text" th:field="*{maxPeople}" required />
@@ -62,7 +62,7 @@
 								</div>
 								<div class="row my-1">
 									<div class="col-5">
-										<label class="col-form-label">Price:</label>
+										<label class="col-form-label">Цена:</label>
 									</div>
 									<div class="col">
 										<input class="form-control" type="text" th:field="*{price}" required />
@@ -70,7 +70,7 @@
 								</div>
 								<div class="row my-1">
 									<div class="col-5">
-										<label class="col-form-label">Image count:</label>
+										<label class="col-form-label">Кол-во фото:</label>
 									</div>
 									<div class="col">
 										<input class="form-control" type="text" th:field="*{imageCount}" disabled />
@@ -78,7 +78,7 @@
 								</div>
 								<div class="row my-1">
 									<div class="col-5">
-										<label class="col-form-label">Panorama URL ID:</label>
+										<label class="col-form-label">Панорама URL ID:</label>
 									</div>
 									<div class="col">
 										<input class="form-control" type="text" th:field="*{panoramaUrlId}" required />
@@ -86,12 +86,60 @@
 								</div>
 								<div class="row my-1">
 									<div class="col-5">
-										<label class="col-form-label">Description:</label>
+										<label class="col-form-label">Описание:</label>
 									</div>
 									<div class="col">
 										<textarea class="form-control" rows="5" th:text="*{description}" required>
 										</textarea>
 									</div>
+								</div>
+								<div class="mt-3">
+									<div>
+										<h4>Комнаты этого типа</h4>
+									</div>
+									<table class="table table-striped table-bordered">
+										<thead>
+											<tr>
+												<th scope="col">id</th>
+												<th scope="col">Название</th>
+												<th scope="col">#</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr th:if="${rooms.empty}">
+												<td colspan="3" class="text-center">Нет доступной информации</td>
+											</tr>
+											<tr th:each="r : ${rooms}">
+												<td>
+													<span th:id="${r.id}" th:text="${r.id}"> #id </span>
+												</td>
+												<td>
+													<span th:text="${r.name}"> Name </span>
+												</td>
+												<td>
+													<div>
+														<button class="custom-btn" name="delete">
+															<span class='fa fa-pencil'></span>
+														</button>
+														<button class="delete-btn custom-btn" type="submit" name="delete">
+															<span class='fa fa-trash'></span>
+														</button>
+													</div>
+												</td>
+											</tr>
+											<tr>
+												<form th:action="@{/admin/rooms/{id}/room(id=${roomType.id})}" method="post">
+													<td></td>
+													<td>
+														<input type="text" name="roomName">
+													</td>
+													<td>
+														<input type="submit" class="btn m-1 btn-success" text="Добавить">
+													</td>
+												</form>
+											</tr>
+										</tbody>
+									</table>
 								</div>
 							</div>
 						</div>
@@ -100,10 +148,10 @@
 							<div class="container-fluid">
 								<div class="row my-2">
 									<label for="images" class="drop-container w-100">
-										<span class="drop-title">Drop files here</span>
-										or
+										<span class="drop-title">Перетащите файлы сюда</span>
+										или
 										<input type="file" id="inputImages" enctype="multipart/form-data" multiple>
-										<button id="uploadImages" type="button">Upload</button>
+										<button id="uploadImages" type="button">Загрузить</button>
 									</label>
 								</div>
 								<th:block th:if="*{imageCount} > 0">
@@ -116,7 +164,7 @@
 														<button class="delete-btn trash-button" th:attr="onclick=|deleteButtons('${i}')|" type="button">
 															<span class='fa fa-trash'></span>
 														</button>
-														<img th:src="${'/img/rooms/' + room.source + '/' + i}" class="d-block w-100" alt="roomImage">
+														<img th:src="${'/img/rooms/' + roomType.source + '/' + i}" class="d-block w-100" alt="roomImage">
 													</div>
 												</div>
 												<th:block th:if="*{imageCount} > 1">
@@ -135,8 +183,8 @@
 									<h4>Для номера не присвоено ни одной фотографии</h4>
 								</th:block>
 								<div class="form-group row">
-									<input class="btn m-1 btn-success col" type="submit" value="Save" />
-									<input class="btn m-1 btn-secondary col" type="reset" value="Reset" />
+									<input class="btn m-1 btn-success col" type="submit" value="Сохранить" />
+									<input class="btn m-1 btn-secondary col" type="reset" value="Обнулить" />
 								</div>
 							</div>
 						</div>
@@ -149,6 +197,7 @@
 	</div>
 </body>
 
+<script src="/js/script.js"></script>
 <script src="/js/sendImageToServer.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 </html>
