--- a/src/main/webapp/WEB-INF/views/rooms.html
+++ b/src/main/webapp/WEB-INF/views/rooms.html
@@ -43,7 +43,7 @@
 		</main>
 	</div>
 
-	<script src="../js/script.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
+	<script src="/js/script.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
